--- a/css/chromtris.css
+++ b/css/chromtris.css
@@ -1,6 +1,8 @@
 body {
     font-family: 'Nova Round', serif;
     font-style: normal;
+    width: 310px;
+    height: 500px;
 }
 
 #ChromTrisBackground {
@@ -8,18 +10,19 @@ body {
     background: rgba(192, 192, 192, 0.5);
     width: 284px;
     height: 480px;
-    top: 40px;
-    left: 40px;
+    top: 20px;
+    left: 20px;
 }
 
 #ChromTrisCanvas ,
 #ChromTrisOverlay {
     position: absolute;
-    top: 30px;
-    left: 30px;
+    top: 10px;
+    left: 10px;
 }
 
 #ChromTrisConsole {
+    display: none;
     position: absolute;
     left: 400px;
     top: 30px;
@@ -36,6 +39,7 @@ body {
 }
 
 #ChromTrisErrorConsole {
+    display: none;
     position: absolute;
     left: 620px;
     top: 30px;
@@ -43,8 +47,8 @@ body {
 
 #header {
     position: absolute;
-    top: 400px;
-    left: 200px;
+    top: 380px;
+    left: 180px;
     -webkit-transform: rotate(-90deg);
     
     color: rgba(64, 64, 64, 0.3);
@@ -56,8 +60,8 @@ body {
 
 #score {
     position: absolute;
-    top: 50px;
-    left: 200px;
+    top: 30px;
+    left: 180px;
     width: 100px;
     
     color: rgba(64, 64, 64, 0.3);
