--- a/css/chromtris.css
+++ b/css/chromtris.css
@@ -14,6 +14,12 @@ body {
     left: 20px;
 }
 
+#ChromTrisLoader {
+    margin-left: 130px; 
+    margin-top: 200px;
+    display:none;
+}
+
 #ChromTrisCanvas ,
 #ChromTrisOverlay {
     position: absolute;
@@ -39,7 +45,6 @@ body {
 }
 
 #ChromTrisErrorConsole {
-    display: none;
     position: absolute;
     left: 620px;
     top: 30px;
